# SFMLSoftBody

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  avg_test.cpp  main.cpp
include/: Matrix.hpp  Point.hpp  Spring.hpp  Vector2.hpp  arial.hpp  averager.hpp  damper.hpp  median.hpp  point_png.cpp  point_png.hpp  video.cpp  video.hpp
test/: damper.cpp  median.cpp  vector.cpp  vector2.cpp
tests/: avg_test.cpp
